--- a/src/main/webapp/pages/ml_prediction.xhtml
+++ b/src/main/webapp/pages/ml_prediction.xhtml
@@ -20,12 +20,12 @@ and open the template in the editor.
                 <ol class="breadcrumb mb-4">
                     <li class="breadcrumb-item active">ML Prediction</li>
                 </ol>
-                <h:panelGroup layout="block">
+                <h:panelGroup layout="block" rendered="#{!mLPrediction.renderPrediction}">
                     <div class="form-row">
                         <div class="col-md-6">
                             <div class="form-group">
                                 <label class="small mb-1" for="inputFirstName">Date</label>
-                                <h:selectOneMenu styleClass="form-control" id="mlPredDate">
+                                <h:selectOneMenu styleClass="form-control" id="mlPredDate" value="#{mLPrediction.date}">
                                     <f:selectItems value="#{commonOptions.predictParam1Options}"/>
                                 </h:selectOneMenu>
                             </div>
@@ -33,7 +33,7 @@ and open the template in the editor.
                         <div class="col-md-6">
                             <div class="form-group">
                                 <label class="small mb-1" for="inputLastName">Plant Stand</label>
-                                <h:selectOneMenu styleClass="form-control" id="mlPredPlantStand">
+                                <h:selectOneMenu styleClass="form-control" id="mlPredPlantStand"  value="#{mLPrediction.plantStand}">
                                     <f:selectItems value="#{commonOptions.predictParam2Options}"/>
                                 </h:selectOneMenu>
                             </div>
@@ -43,7 +43,7 @@ and open the template in the editor.
                         <div class="col-md-6">
                             <div class="form-group">
                                 <label class="small mb-1" for="inputFirstName">Precipitation</label>
-                                <h:selectOneMenu styleClass="form-control" id="mlPrecip">
+                                <h:selectOneMenu styleClass="form-control" id="mlPrecip"  value="#{mLPrediction.precip}">
                                     <f:selectItems value="#{commonOptions.predictParam3Options}"/>
                                 </h:selectOneMenu>
                             </div>
@@ -51,55 +51,58 @@ and open the template in the editor.
                         <div class="col-md-6">
                             <div class="form-group">
                                 <label class="small mb-1" for="inputLastName">Temperature</label>
-                                <h:selectOneMenu styleClass="form-control" id="mlTemp">
+                                <h:selectOneMenu styleClass="form-control" id="mlTemp"  value="#{mLPrediction.temp}">
                                     <f:selectItems value="#{commonOptions.predictParam4Options}"/>
                                 </h:selectOneMenu>
                             </div>
                         </div>
                     </div>
-                    <div class="form-group">
-                        <label class="small mb-1" for="inputEmailAddress">Other</label>
-                        <h:inputText autocomplete="off" id="inputparam5" styleClass="form-control" pt:placeholder="Enter something pls"/>
-                    </div>
                     <center>
                         <div class="form-group mt-4 mb-0">
-                            <h:commandButton styleClass="btn btn-primary" style="width: 70%" value="Get Prediction"/>
+                            <h:commandButton styleClass="btn btn-primary" action="#{mLPrediction.predictPost}" id="predict" style="width: 70%" value="Get Prediction"/>
                         </div>
                     </center>
                     <br/><br/>
                     <hr/>
                 </h:panelGroup>
 
-                <h:panelGroup layout="block" rendered="true">
+                <h:panelGroup layout="block" rendered="#{mLPrediction.renderPrediction}">
                     <div class="form-row">
-                        <div class="col-md-4"></div>
-                        <div class="col-md-4">
+                        <div class="col-md-6">
                             <div class="form-group">
                                 <label class="small mb-1" for="inputLastName">Predicted Disease</label>
-                                <h:inputText styleClass="form-control" id="mlPredictedDisease" readonly="true" value="Predicted Diseaese"/>
+                                <h:inputText styleClass="form-control" id="mlPredictedDisease" readonly="true" value="#{mLPrediction.diseases.name}"/>
                             </div>
                         </div>
-                        <div class="col-md-4"></div>
+                        <div class="col-md-6">
+                            <h:panelGroup layout="block" styleClass="form-group">
+                                <label class="small mb-1" for="inputEmailAddress">Associated Farm</label>
+                                <h:selectOneMenu styleClass="form-control" id="associatedFarm"  value="#{mLPrediction.farmDetailSelected}">
+                                    <f:selectItems value="#{commonOptions.farmDetailsOption}"/>
+                                </h:selectOneMenu>
+                                <!--<h:inputText autocomplete="off" id="associatedFarm" styleClass="form-control" pt:placeholder="Enter something pls"/>-->
+                            </h:panelGroup>
+                        </div>
                     </div>
 
                     <div class="form-row">
                         <div class="col-md-6">
                             <div class="form-group">
                                 <label class="small mb-1" for="inputFirstName">Description</label>
-                                <h:inputTextarea styleClass="form-control" rows="3" readonly="true" value="Fisher,D.H. and Schlimmer,J.C. (1988). Concept Simplification and Predictive Accuracy. Proceedings of the Fifth International Conference on Machine Learning (pp. 22-28). Ann Arbor, Michigan: Morgan Kaufmann."/>
+                                <h:inputTextarea styleClass="form-control" rows="3" id="predDisDesc" readonly="true" value="#{mLPrediction.diseases.description}"/>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="form-group">
                                 <label class="small mb-1" for="inputFirstName">Prescription</label>
-                                <h:inputTextarea styleClass="form-control" rows="3" readonly="true" value="Prescription"/>
+                                <h:inputTextarea styleClass="form-control" id="predDisPres" rows="3" readonly="true" value="#{mLPrediction.diseases.prescription}"/>
                             </div>
                         </div>
                     </div>
                     <center>
                         <div class="form-group mt-4 mb-0">
-                            <h:commandButton styleClass="btn btn-primary" style="width: 70%; margin: 7px" value="Save"/>
-                            <h:commandButton styleClass="btn btn-primary" style="width: 70%" value="Cancel"/>
+                            <h:commandButton styleClass="btn btn-primary" style="width: 70%; margin: 7px" value="Save" action="#{mLPrediction.savePrediction}"/>
+                            <h:commandButton styleClass="btn btn-primary" style="width: 70%" value="Cancel" action="#{mLPrediction.resetPrediction}"/>
                         </div>
                     </center>
                 </h:panelGroup>
