--- a/src/main/webapp/pages/register_user.xhtml
+++ b/src/main/webapp/pages/register_user.xhtml
@@ -9,29 +9,35 @@ and open the template in the editor.
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:pt="http://xmlns.jcp.org/jsf/passthrough"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:p="http://primefaces.org/ui">
     <head>
         <title>TODO supply a title</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </head>
     <body>
         <ui:composition>
-            <h:form prependId="false">
-                <ol class="breadcrumb mb-4">
-                    <li class="breadcrumb-item active">Register User</li>
-                </ol>
-                <h:panelGroup layout="block">
+            <ol class="breadcrumb mb-4">
+                <li class="breadcrumb-item active">Register User</li>
+            </ol>
+            <h:panelGroup layout="block" rendered="#{!systemUserController.renderAfterSave}">
+                <h:form prependId="false">
                     <div class="form-row">
                         <div class="col-md-6">
-                            <div class="form-group">
+                            <h:panelGroup layout="block" class="form-group">
                                 <label class="small mb-1" for="inputFirstName">First Name</label>
-                                <h:inputText id="sysFName" styleClass="form-control" pt:placeholder="Enter something pls"/>
-                            </div>
+                                <h:inputText id="sysFName" styleClass="form-control" 
+                                             pt:placeholder="Enter something pls" 
+                                             value="#{systemUserController.systemUser.firstname}"
+                                             required="#{!empty param['saveUser']}" 
+                                             requiredMessage="*required"/>
+                                <h:message for="sysFName" class="errorMessage"/>
+                            </h:panelGroup>
                         </div>
                         <div class="col-md-6">
                             <div class="form-group">
                                 <label class="small mb-1" for="inputLastName">Last Name</label>
-                                <h:inputText id="sysLName" styleClass="form-control" pt:placeholder="Enter something pls"/>
+                                <h:inputText id="sysLName" styleClass="form-control" pt:placeholder="Enter something pls" value="#{systemUserController.systemUser.lastname}"/>
                             </div>
                         </div>
                     </div>
@@ -40,7 +46,7 @@ and open the template in the editor.
                             <div class="form-group">
                                 <label class="small mb-1" for="inputFirstName">Gender</label>
                                 <!--<h:inputText id="inputparam3" styleClass="form-control py-4" pt:placeholder="Enter something pls"/>-->
-                                <h:selectOneMenu styleClass="form-control" id="sysGender">
+                                <h:selectOneMenu styleClass="form-control" id="sysGender" value="#{systemUserController.systemUser.gender}">
                                     <f:selectItems value="#{commonOptions.genderOptions}"/>
                                 </h:selectOneMenu>
                             </div>
@@ -48,7 +54,7 @@ and open the template in the editor.
                         <div class="col-md-6">
                             <div class="form-group">
                                 <label class="small mb-1" for="inputLastName">Phone Number</label>
-                                <h:inputText autocomplete="off" id="sysPhoneNum" styleClass="form-control" pt:placeholder="Enter something pls"/>
+                                <h:inputText autocomplete="off" id="sysPhoneNum" styleClass="form-control" pt:placeholder="Enter something pls" value="#{systemUserController.systemUser.phoneNumber}"/>
                             </div>
                         </div>
                     </div>
@@ -57,7 +63,7 @@ and open the template in the editor.
                             <div class="form-group">
                                 <label class="small mb-1" for="inputEmailAddress">User Role</label>
                                 <!--<h:inputText autocomplete="off" id="inputparam5" styleClass="form-control py-4" pt:placeholder="Enter something pls"/>-->
-                                <h:selectOneMenu styleClass="form-control" id="sysUserRole">
+                                <h:selectOneMenu disabled="#{systemUserController.disableGroup}" styleClass="form-control" id="sysUserRole" value="#{systemUserController.selectedRole}">
                                     <f:selectItems value="#{commonOptions.userRoleOptions}"/>
                                 </h:selectOneMenu>
                             </div>
@@ -65,26 +71,103 @@ and open the template in the editor.
                         <div class="col-md-6">
                             <div class="form-group">
                                 <label class="small mb-1" for="inputLastName">Email</label>
-                                <h:inputText autocomplete="off" id="sysEmail" styleClass="form-control" pt:placeholder="Enter something pls"/>
+                                <h:inputText autocomplete="off" id="sysEmail" styleClass="form-control" pt:placeholder="Enter something pls" value="#{systemUserController.systemUser.username}"/>
                             </div>
                         </div>
                     </div>
                     <center>
                         <div class="form-group mt-4 mb-0">
-                            <h:commandButton styleClass="btn btn-primary" style="width: 70%" value="Register Account"/>
+                            <h:commandButton styleClass="btn btn-primary" style="width: 70%; margin: 7px" 
+                                             value="Register Account" action="#{systemUserController.saveUser}"
+                                             rendered="#{systemUserController.renderSave}">
+                                <f:param name="saveUser" value="true"/>
+                            </h:commandButton>
+                            <h:commandButton styleClass="btn btn-primary" style="width: 70%; margin: 7px" 
+                                             value="Reset Registeration" action="#{systemUserController.resetButton}"
+                                             rendered="#{systemUserController.renderSave}"/>
+                            <h:commandButton styleClass="btn btn-primary" style="width: 70%; margin: 7px" 
+                                             value="Update Account" action="#{systemUserController.updateSysUser}"
+                                             rendered="#{!systemUserController.renderSave}">
+                                <f:param name="saveUser" value="true"/>
+                            </h:commandButton>
+                            <h:commandButton styleClass="btn btn-primary" style="width: 70%; margin: 7px" 
+                                             value="Cancel Update" action="#{systemUserController.resetButton}"
+                                             rendered="#{!systemUserController.renderSave}"/>
                         </div>
                     </center>
                     <br/><br/>
                     <hr/>
-                </h:panelGroup>
+                </h:form>
 
-                <h:panelGroup layout="block" rendered="true">
+                <h:form>
+                    <h:panelGroup layout="block" styleClass="row">
+                        <h:panelGroup layout="block" styleClass="col-md-4">
+                            <h:outputLabel value="Search By: "/>
+                            <h:selectOneMenu styleClass="form-control" id="selectSysUser"
+                                             requiredMessage="Select One Criteria"
+                                             value="#{systemUserController.searchCriteria}">
+                                <f:selectItem itemValue="" itemLabel="---Select One---"/>
+                                <f:selectItem itemValue="firstname" itemLabel="Name"/>
+                                <f:selectItem itemValue="phoneNumber" itemLabel="Contact"/>
+                            </h:selectOneMenu>
+                        </h:panelGroup>
+                        <h:panelGroup layout="block" styleClass="col-md-4">
+                            <h:outputLabel value="Search Text: "/>
+                            <h:inputText id="searchSysUserText" styleClass="form-control" 
+                                         pt:placeholder="Search Text" value="#{systemUserController.searchText}"/>
+                        </h:panelGroup>
+                        <h:panelGroup layout="block" styleClass="col-md-4">
+                            <h:commandButton value="Search" styleClass="btn btn-primary btn-fill" 
+                                             style="margin: 30px 3px 0 0" action="#{systemUserController.searchSystemUser}"/>
+                            <h:commandButton value="Reset" styleClass="btn btn-primary btn-fill" 
+                                             style="margin: 30px 3px 0 0" action="#{systemUserController.resetSearch}"/>
+                        </h:panelGroup>
+                    </h:panelGroup>
+                    <br/>
+                    <h:panelGroup layout="block" class="row">
+                        <h:panelGroup layout="block" class="col-md-12">
+                            <!--resizableColumns="true" style="margin-bottom:20px"-->
+                            <p:dataTable var="manage_users" paginator="true" id="search_sys_user"
+                                         paginatorPosition="bottom" rows="5" value="#{systemUserController.systemUserDataTable}"
+                                         paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"                                     
+                                         currentPageReportTemplate="{startRecord}-{endRecord} of {totalRecords} records"
+                                         rowsPerPageTemplate="5,10,15">
+                                <f:facet name="header">
+                                    <h:outputText value="List of Officers"/>
+                                </f:facet>
+                                <p:column headerText="Firstname" style="width: 150px">
+                                    <h:outputText value="#{manage_users.firstname}" />
+                                </p:column>
+                                <p:column headerText="Lastname" style="width: 150px">
+                                    <h:outputText value="#{manage_users.lastname}"/>
+                                </p:column>
+                                <p:column headerText="Gender" priority="3" style="width: 100px">
+                                    <h:outputText value="#{manage_users.gender}"/>
+                                </p:column>
+                                <p:column headerText="Status" style="width: 150px">
+                                    <h:outputText value="#{manage_users.accountStatus}"/>
+                                </p:column>
+                                <p:column headerText="Contact" style="width: 150px" priority="2">
+                                    <h:outputText value="#{manage_users.phoneNumber}"/>
+                                </p:column>
+                                <p:column headerText="Options" style="width: 100px">
+                                    <h:commandLink value="Select" style="text-decoration: underline;color: green"
+                                                   action="#{systemUserController.rowSelectDataSysUser}"/>
+                                </p:column>
+                            </p:dataTable> 
+                        </h:panelGroup>
+                    </h:panelGroup>
+                </h:form>
+            </h:panelGroup>
+
+            <h:panelGroup layout="block" rendered="#{systemUserController.renderAfterSave}">
+                <h:form>
                     <div class="form-row">
                         <div class="col-md-4"></div>
                         <div class="col-md-4">
                             <div class="form-group">
                                 <label class="small mb-1" for="inputLastName">User Group</label>
-                                <h:inputText styleClass="form-control" id="genUgroup" readonly="true" value="My User Group"/>
+                                <h:inputText styleClass="form-control" id="genUgroup" readonly="true" value="#{systemUserController.userGroup}"/>
                             </div>
                         </div>
                         <div class="col-md-4"></div>
@@ -94,24 +177,24 @@ and open the template in the editor.
                         <div class="col-md-6">
                             <div class="form-group">
                                 <label class="small mb-1" for="inputFirstName">Username</label>
-                                <h:inputText styleClass="form-control" id="genUname" readonly="true" value="Generated Username"/>
+                                <h:inputText styleClass="form-control" id="genUname" readonly="true" value="#{systemUserController.username}"/>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="form-group">
                                 <label class="small mb-1" for="inputFirstName">Password</label>
-                                <h:inputText styleClass="form-control" id="genPass" readonly="true" value="Generated Password"/>
+                                <h:inputText styleClass="form-control" id="genPass" readonly="true" value="#{systemUserController.password}"/>
                             </div>
                         </div>
                     </div>
                     <center>
                         <div class="form-group mt-4 mb-0">
                             <!--<h:commandButton styleClass="btn btn-primary" style="width: 70%; margin: 7px" value="Save"/>-->
-                            <h:commandButton styleClass="btn btn-primary" style="width: 70%" value="Ok...Proceed"/>
+                            <h:commandButton styleClass="btn btn-primary" style="width: 70%" value="Ok...Proceed" action="#{systemUserController.resetButton}" />
                         </div>
                     </center>
-                </h:panelGroup>
-            </h:form>
+                </h:form>
+            </h:panelGroup>
         </ui:composition>
     </body>
 </html>
