--- a/src/main/webapp/pages/search_prediction.xhtml
+++ b/src/main/webapp/pages/search_prediction.xhtml
@@ -26,19 +26,23 @@ and open the template in the editor.
                     <h:panelGroup layout="block" styleClass="col-md-4">
                         <h:outputLabel value="Search By: "/>
                         <h:selectOneMenu styleClass="form-control" id="selectPred"
-                                         requiredMessage="Select One Criteria">
+                                         requiredMessage="Select One Criteria"
+                                         value="#{generalSearch.searchCriteria}">
                             <f:selectItem itemValue="" itemLabel="---Select One---"/>
-                            <f:selectItem itemValue="" itemLabel="Farm Name"/>
-                            <f:selectItem itemValue="" itemLabel="Disease"/>
+                            <f:selectItem itemValue="prediction.name" itemLabel="Disease"/>
+                            <f:selectItem itemValue="farmDetail.name" itemLabel="Farm Name"/>
                         </h:selectOneMenu>
                     </h:panelGroup>
                     <h:panelGroup layout="block" styleClass="col-md-4">
                         <h:outputLabel value="Search Text: "/>
-                        <h:inputText id="searchPredText" styleClass="form-control" pt:placeholder="Search Text"/>
+                        <h:inputText id="searchPredText" styleClass="form-control" pt:placeholder="Search Text"
+                                     value="#{generalSearch.searchText}"/>
                     </h:panelGroup>
                     <h:panelGroup layout="block" styleClass="col-md-4">
-                        <h:commandButton value="Search" styleClass="btn btn-primary btn-fill" style="margin: 30px 3px 0 0" />
-                        <h:commandButton value="Reset" styleClass="btn btn-primary btn-fill" style="margin: 30px 3px 0 0"/>
+                        <h:commandButton value="Search" styleClass="btn btn-primary btn-fill" style="margin: 30px 3px 0 0" 
+                                         action="#{generalSearch.searchPredictions}"/>
+                        <h:commandButton value="Reset" styleClass="btn btn-primary btn-fill" style="margin: 30px 3px 0 0"
+                                         action="#{generalSearch.resetSearch}"/>
                     </h:panelGroup>
                 </h:panelGroup>
                 <br/>
@@ -46,37 +50,40 @@ and open the template in the editor.
                 <h:panelGroup layout="block" class="row">
                     <h:panelGroup layout="block" class="col-md-12">
                         <!--resizableColumns="true" style="margin-bottom:20px"-->
-                        <p:dataTable var="manage_prediction" paginator="true" id="search_prediction"
-                                     paginatorPosition="bottom" rows="10"
+                        <p:dataTable var="search_predict" paginator="true" id="search_prediction"
+                                     paginatorPosition="bottom" rows="5" value="#{generalSearch.mlPredictionsDataTable}"
                                      paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"                                     
                                      currentPageReportTemplate="{startRecord}-{endRecord} of {totalRecords} records"
-                                     rowsPerPageTemplate="5,10,15">
+                                     rowsPerPageTemplate="5,10,15" reflow="true">
                             <f:facet name="header">
                                 <h:outputText value="List of Predictions"/>
                             </f:facet>
-                            <p:column headerText="Date" priority="2" style="width: 150px">
-                                <h:outputText value="02/25/2020" />
+                            <p:column headerText="Date" priority="2">
+                                <h:outputText value="#{search_predict.date}">
+                                    <f:convertDateTime dateStyle="short" pattern="dd/MM/yyyy" type="date" timeStyle="short"/>
+                                </h:outputText>
                             </p:column>
-                            <p:column headerText="Input1" priority="3">
-                                <h:outputText value="August"/>
+                            <p:column headerText="Precip" priority="3">
+                                <h:outputText value="#{search_predict.inputParam1}"/>
                             </p:column>
-                            <p:column headerText="Input2" priority="4">
-                                <h:outputText value="Grater-Than Normal"/>
+                            <p:column headerText="Temp" priority="4">
+                                <h:outputText value="#{search_predict.inputParam2}"/>
                             </p:column>
-                            <p:column headerText="Input3" priority="5">
-                                <h:outputText value="Less-Than Normal"/>
+                            <p:column headerText="Plant Stand" priority="5">
+                                <h:outputText value="#{search_predict.inputParam3}"/>
                             </p:column>
-                            <p:column headerText="Input4" priority="6">
-                                <h:outputText value="Normal"/>
+                            <p:column headerText="Date" priority="6">
+                                <h:outputText value="#{search_predict.inputParam4}"/>
                             </p:column>
-                            <p:column headerText="Prediction" style="width: 150px">
-                                <h:outputText value="Pneumonia"/>
+                            <p:column headerText="Prediction">
+                                <h:outputText value="#{search_predict.prediction.name}"/>
                             </p:column>
-                            <p:column headerText="Farm" style="width: 200px">
-                                <h:outputText value="Akropong Farm2"/>
+                            <p:column headerText="Farm">
+                                <h:outputText value="#{search_predict.farmDetail.name}"/>
                             </p:column>
-                            <p:column headerText="Options" style="width: 100px">
-                                <h:commandLink value="Select" style="text-decoration: underline;color: green"/>
+                            <p:column headerText="Options">
+                                <h:commandLink value="Select" style="text-decoration: underline;color: green"
+                                               action="#{generalSearch.rowSelectPrediction}"/>
                             </p:column>
                         </p:dataTable> 
                     </h:panelGroup>
@@ -84,19 +91,21 @@ and open the template in the editor.
 
                 <br/><br/><hr/>
 
-                <h:panelGroup layout="block" rendered="true">
+                <h:panelGroup layout="block" rendered="#{generalSearch.renderSearchedView}">
 
                     <div class="form-row">
                         <div class="col-md-6">
                             <div class="form-group">
                                 <label class="small mb-1" for="inputFirstName">Date</label>
-                                <h:inputText styleClass="form-control" readonly="true" value=""/>
+                                <h:inputText styleClass="form-control" readonly="true" value="#{generalSearch.mlPrediction.date}">
+                                    <f:convertDateTime dateStyle="short" pattern="dd/MM/yyyy" type="date" timeStyle="short"/>
+                                </h:inputText>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="form-group">
                                 <label class="small mb-1" for="inputFirstName">Prediction</label>
-                                <h:inputText styleClass="form-control" readonly="true" value=""/>
+                                <h:inputText styleClass="form-control" readonly="true" value="#{generalSearch.diseases.name}"/>
                             </div>
                         </div>
                     </div>
@@ -104,14 +113,14 @@ and open the template in the editor.
                     <div class="form-row">
                         <div class="col-md-6">
                             <div class="form-group">
-                                <label class="small mb-1" for="inputFirstName">Input Param 1</label>
-                                <h:inputText styleClass="form-control" readonly="true" value="Generated Username"/>
+                                <label class="small mb-1" for="inputFirstName">Precipitation</label>
+                                <h:inputText styleClass="form-control" readonly="true" value="#{generalSearch.predPrecip.value}"/>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="form-group">
-                                <label class="small mb-1" for="inputFirstName">Input Param 2</label>
-                                <h:inputText styleClass="form-control" readonly="true" value=""/>
+                                <label class="small mb-1" for="inputFirstName">Temperature</label>
+                                <h:inputText styleClass="form-control" readonly="true" value="#{generalSearch.predTemp.value}"/>
                             </div>
                         </div>
                     </div>
@@ -119,14 +128,14 @@ and open the template in the editor.
                     <div class="form-row">
                         <div class="col-md-6">
                             <div class="form-group">
-                                <label class="small mb-1" for="inputFirstName">Input Param 3</label>
-                                <h:inputText styleClass="form-control" readonly="true" value=""/>
+                                <label class="small mb-1" for="inputFirstName">Plant Stand</label>
+                                <h:inputText styleClass="form-control" readonly="true" value="#{generalSearch.predPlantStand.value}"/>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="form-group">
-                                <label class="small mb-1" for="inputFirstName">Input Param 4</label>
-                                <h:inputText styleClass="form-control" readonly="true" value=""/>
+                                <label class="small mb-1" for="inputFirstName">Date(Month)</label>
+                                <h:inputText styleClass="form-control" readonly="true" value="#{generalSearch.predDate.value}"/>
                             </div>
                         </div>
                     </div>
@@ -137,20 +146,22 @@ and open the template in the editor.
                         <div class="col-md-6">
                             <div class="form-group">
                                 <label class="small mb-1" for="inputFirstName">Farm Name</label>
-                                <h:inputText styleClass="form-control" readonly="true" value=""/>
+                                <h:inputText styleClass="form-control" readonly="true" value="#{generalSearch.farmDetail.name}"/>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="form-group">
                                 <label class="small mb-1" for="inputFirstName">Owner</label>
-                                <h:inputText styleClass="form-control" readonly="true" value=""/>
+                                <h:inputText styleClass="form-control" readonly="true" 
+                                             value="#{generalSearch.farmDetail.owner.firstname} #{generalSearch.farmDetail.owner.lastname}"/>
                             </div>
                         </div>
                     </div>
 
                     <center>
                         <div class="form-group mt-4 mb-0">
-                            <h:commandButton styleClass="btn btn-primary" style="width: 70%" value="Cancel"/>
+                            <h:commandButton styleClass="btn btn-primary" style="width: 70%" value="Cancel"
+                                             action="#{generalSearch.resetSelection}"/>
                         </div>
                     </center>
                 </h:panelGroup>
